--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ hello friend # Object file
 # Ada Library Information
 *.ali
 all file reset .in
+fgpip install pyinstaller
+hello {maya}lock 
+no panthon lock
+code.1202102113121
