--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,47 @@ fgpip install pyinstaller
 hello {maya}lock 
 no panthon lock
 code.1202102113121
+# hupu-in
+hop you trust me
+- **Bold Fonts**: Uses unique bold fonts to enhance the theme's visual appeal.
+- **Minimalistic Design**: Focuses on simplicity with a kawaii-inspired aesthetic.
+- **Easy to Install**: Follow the installation steps to quickly apply the theme to your GRUB.
+- **High Customizability**: Modify colors, fonts, and more to make it your own
+
+name: "Bug Report"
+
+<!-- A clear and concise description of what you expected to happen. -->
+
+## Screenshotsabout: "Report a bug in the application"
+title: "[BUG]: "
+labels: bug
+assignees: ""
+---
+
+<!-- This file includes comments for guidance. No need to delete them, they will not appear in the final issue. e.g. current line -->
+
+<!-- Please use bullet points instead of paragraphs to keep your issue clear and easy to follow. -->
+
+## Describe the bug
+
+<!--A clear and concise description of what the bug is.-->
+
+## Steps to reproduce
+
+1. Go to '...'
+2. Click on '...'
+3. Scroll down to '...'
+4. See error
+
+## Expected behavior
+
+
+<!-- If applicable, add links to help explain your bug. To add a link, use the format: [Link Text](URL). For example: [GitHub](https://github.com)
+
+Alternatively, add images by position the cursor on the next line and either drag and drop the file or click the 'Paste, drop, or click to add files' button below. -->
+
+### Desktop (please complete the following information)
+
+<!-- If not applicable delete this section -->
+
+- OS Version: <!-- [e.g. Windows 11, macOS 15] -->
