Revise .gitignore for better file management
Clean up and update .gitignore with relevant entries.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 hello friend # Object file
 *.o
-
-# Ada Library Information
+#0000000''
+# Ada Library "Informational"
 *.ali
-all file reset .in
+all file reset .into©
 fgpip install pyinstaller
 hello {maya}lock 
 no panthon lock
-code.1202102113121
+code.1202102113121,
 # hupu-in
 hop you trust me
 - **Bold Fonts**: Uses unique bold fonts to enhance the theme's visual appeal.
